--- a/papers/Theory/Theory.tex
+++ b/papers/Theory/Theory.tex
@@ -1,5 +1,10 @@
 \chapter{Theory}
-\section{Spin-orbit coupling}
+
+\section{Density Functional Theory \label{sec:DFT}}
+
+
+
+
 \section{Wannier Functions \label{sec:Wannier}}
 
 In a lot of the work presented in this Thesis we construct simplified model Hamiltonians to try and describe the physics that are manifested real materials.
