--- a/papers/Theory/bib.bib
+++ b/papers/Theory/bib.bib
@@ -37,3 +37,36 @@ title = {{Formalisms of Band Theory}},
 volume = {13},
 year = {1962}
 }
+
+@article{Serebryanaya1995,
+abstract = {An "in situ" X-ray diffraction study of the GeTe under shear deformation and nonhydrostatic pressure conditions has been performed. By applying the shear deformation, two phase transitions with structure changes from NaCl to GeS and further to CsCl types were first detected at 19.2 and 38 GPa respectively. The X-ray powder diffraction data and unit-cell parameters of both pressure-induced phases of GeTe are given. The shear-deformation dependence of the GeTe transition pressures is found. {\textcopyright} 1995 Elsevier Science B.V.},
+author = {Serebryanaya, N. R. and Blank, V. D. and Ivdenko, V. A.},
+doi = {10.1016/0375-9601(94)00886-T},
+file = {:home/ponet/Downloads/0375-9601(94)00886-t.pdf:pdf},
+issn = {03759601},
+journal = {Physics Letters A},
+number = {1},
+pages = {63--66},
+title = {{GeTe-phases under shear deformation and high pressure up to 56 GPa}},
+volume = {197},
+year = {1995}
+}
+
+@article{Slater1954,
+abstract = {The LCAO, or Bloch, or tight binding, approximation for solids is discussed as an interpolation method, to be used in connection with more accurate calculations made by the cellular or orthogonalized plane-wave methods. It is proposed that the various integrals be obtained as disposable constants, so that the tight binding method will agree with accurate calculations at symmetry points in the Brillouin zone for which these calculations have been made, and that the LCAO method then be used for making calculations throughout the Brillouin zone. A general discussion of the method is given, including tables of matrix components of energy for simple cubic, face-centered and body-centered cubic, and diamond structures. Applications are given to the results of Fletcher and Wohlfarth on Ni, and Howarth on Cu, as illustrations of the fcc case. In discussing the bcc case, the splitting of the energy bands in chromium by an antiferromagnetic alternating potential is worked out, as well as a distribution of energy states for the case of no antiferromagnetism. For diamond, comparisons are made with the calculations of Herman, using the orthogonalized plane-wave method. The case of such crystals as InSb is discussed, and it is shown that their properties fit in with the energy band picture.},
+annote = {NULL},
+author = {Slater, J. C. and Koster, G. F.},
+doi = {10.1103/PhysRev.94.1498},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Slater, Koster - 1954 - Simplified LCAO method for the periodic potential problem.pdf:pdf},
+isbn = {0031-899X},
+issn = {0031899X},
+journal = {Physical Review},
+mendeley-groups = {General Physics,General Physics/Tight Binding},
+number = {6},
+pages = {1498--1524},
+pmid = {22095536},
+title = {{Simplified LCAO method for the periodic potential problem}},
+volume = {94},
+year = {1954}
+}
+
