--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -133,10 +133,10 @@ We utilize both theoretical and computational tools to understand the nature of 
 % \chapter*{Acknowledgements}
 \tableofcontents
 
-\Include{Introduction}
-\Include{Theory}
-\Include{Rashba}
-\Include{Cr}
+% \Include{Introduction}
+% \Include{Theory}
+% \Include{Rashba}
+% \Include{Cr}
 \Include{GdMn2O5}
-\Include{Softening}
+% \Include{Softening}
 \end{document}
